# qpsolvers

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  THANKS  __init__.py  developer-notes.html  example.py  genindex.html  index.html  installation.html  least-squares.html  objects.inv  py-modindex.html  pyproject.toml  quadratic-programming.html  references.html  requirements.txt  requirements2.txt  search.html  searchindex.js  setup.py  supported-solvers.html  tox.ini  unsupported-solvers.html
.doctrees/: developer-notes.doctree  environment.pickle  index.doctree  installation.doctree  least-squares.doctree  quadratic-programming.doctree  references.doctree  supported-solvers.doctree  unsupported-solvers.doctree
.github/workflows/: build.yml  changelog.yml  ci.yml  docs.yml  main.yml  pypi.yml  test.yml
.github/workflows/conda/: env.yml
_sources/: developer-notes.rst.txt  installation.rst.txt  quadratic-programming.rst.txt  references.rst.txt  supported-solvers.rst.txt  unsupported-solvers.rst.txt
_static/: documentation_options.js
benchmark/: benchmark_model_predictive_control.py  benchmark_random_problems.py  benchmark_sparse_problem.py
doc/: Makefile  conf.py  developer-notes.rst  environment.yml  index.rst  installation.rst  least-squares.rst  quadratic-programming.rst  references.rst  supported-solvers.rst  unsupported-solvers.rst
doc/src/: conf.py  cvxopt.rst  developer-notes.rst  ecos.rst  getting-started.rst  gurobi.rst  index.rst  installation.rst  least-squares.rst  mosek.rst  osqp.rst  qpoases.rst  quadprog.rst  quadratic-programming.rst  references.rst  supported-solvers.rst
doc/src/css/: custom.css
examples/: 01_quadratic_program.py  02_least_squares.py  03_box_inequalities.py  04_sparse_least_squares.py  05_dual_multipliers.py  README.md  benchmark_dense_problem.py  benchmark_model_predictive_control.py  benchmark_random_problems.py  benchmark_sparse_problem.py  box_inequalities.py  constrained_linear_regression.py  dense.py  dense_problem.py  dual_multipliers.py  lasso_regularization.py  least_squares.py  lower_upper_bounds.py  model_predictive_control.py  quadratic_program.py  quadratic_programming.py  random_problems.py  randomized.py  readme_example.py  simple_example.py  small.py  sparse.py  sparse_least_squares.py  sparse_problem.py  test_dense_problem.py  test_model_predictive_control.py  test_random_problems.py  test_solvers.py  test_sparse_problem.py
oqp/: __init__.py  backend_cvxopt.py  backend_cvxpy.py  backend_gurobi.py  backend_qpoases.py  backend_quadprog.py
qpsolvers/: __init__.py  _internals.py  active_set.py  backend_cvxopt.py  backend_cvxpy.py  backend_gurobi.py  backend_qpoases.py  backend_quadprog.py  check_problem_constraints.py  concatenate_bounds.py  convert_bounds_to_inequalities.py  cvxopt_.py  cvxpy_.py  ecos_.py  exceptions.py  gurobi_.py  mosek_.py  osqp_.py  problem.py  problems.py  qpoases_.py  quadprog_.py  scs_.py  socp.py  solution.py  solve_ls.py  solve_problem.py  solve_qp.py  solve_qp2.py  solve_safer_qp.py  solve_unconstrained.py  solver_output.py  typing.py  utils.py  warnings.py
qpsolvers/conversions/: __init__.py  combine_linear_box_inequalities.py  ensure_sparse_matrices.py  linear_from_box_inequalities.py  remove_infinite_inequalities.py  socp_from_qp.py  split_dual_linear_box.py  warnings.py
qpsolvers/solvers/: __init__.py  clarabel_.py  convert_to_socp.py  copt_.py  cvxopt_.py  cvxpy_.py  daqp_.py  ecos_.py  gurobi_.py  highs_.py  hpipm_.py  jaxopt_osqp_.py  kvxopt_.py  mosek_.py  nppro_.py  osqp_.py  pdhcg_.py  pdlp_.py  piqp_.py  proxqp_.py  pyqpmad_.py  qpalm_.py  qpax_.py  qpoases_.py  qpswift_.py  qtqp_.py  quadprog_.py  scip_.py  scs_.py  sip_.py  socp.py  typing.py
qpsolvers/solvers/conversions/: __init__.py  concatenate_bounds.py  linear_from_box_inequalities.py  socp_from_qp.py  warnings.py
qpsolvers/unsupported/: __init__.py  mosek_.py  nppro_.py
tests/: __init__.py  example.py  problems.py  solved_problems.py  test_check_problem_constraints.py  test_clarabel.py  test_combine_linear_box_inequalities.py  test_concatenate_bounds.py  test_conversions.py  test_copt.py  test_cvxopt.py  test_dual.py  test_ecos.py  test_gurobi.py  test_highs.py  test_jaxopt_osqp.py  test_kvxopt.py  test_mosek.py  test_nppro.py  test_osqp.py  test_piqp.py  test_problem.py  test_proxqp.py  test_pyqpmad.py  test_qpax.py  test_qpoases.py  test_qpswift.py  test_quadprog.py  test_readme.py  test_scip.py  test_scs.py  test_sip.py  test_solution.py  test_solve_ls.py  test_solve_problem.py  test_solve_qp.py  test_timings.py  test_unfeasible_problem.py  test_utils.py  unfeasible.py
