[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qpsolvers"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy >=1.15.4",
    "scipy >=1.2.0",
]
keywords = ["quadratic programming", "solver", "numerical optimization"]

[project.optional-dependencies]
clarabel = ["clarabel >=0.4.1"]
cvxopt = ["cvxopt >=1.2.6"]
kvxopt = ["kvxopt >=1.3.2"]
daqp = ["daqp >=0.5.1"]
ecos = ["ecos >=2.0.8"]
gurobi = ["gurobipy >=9.5.2"]
highs = ["highspy >=1.1.2.dev3"]
jaxopt = ["jaxopt >=0.8.3"]
mosek = ["cvxopt >=1.2.6", "mosek >=10.0.40"]
osqp = ["osqp >=0.6.2"]
piqp = ["piqp >=0.2.2"]
proxqp = ["proxsuite >=0.2.9"]
qpalm = ["qpalm >=1.2.1"]
quadprog = ["quadprog >=0.1.11"]
qpax = ["qpax>=0.0.9"]
scs = ["scs >=3.2.0"]
sip = ["sip-python >=0.0.2"]
open_source_solvers = ["qpsolvers[clarabel,cvxopt,daqp,ecos,highs,jaxopt,osqp,piqp,proxqp,qpalm,quadprog,scs,sip,qpax]"]

# Wheels-only solvers should distribute wheels that work on:
# - macOS (aarch64)
# - macOS (x86)
# - Linux (x86)
# - Windows (x86)
wheels_only = ["qpsolvers[cvxopt,daqp,ecos,highs,piqp,proxqp,qpalm,sip]"]

[project.urls]
Homepage = "https://github.com/qpsolvers/qpsolvers"
Documentation = "https://qpsolvers.github.io/qpsolvers/"
Source = "https://github.com/qpsolvers/qpsolvers"
Tracker = "https://github.com/qpsolvers/qpsolvers/issues"
Changelog = "https://github.com/qpsolvers/qpsolvers/blob/main/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.coverage]
report.include = ["qpsolvers/*"]
report.omit = ["qpsolvers/unsupported/*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
