[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qpsolvers"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy >=1.15.4",
    "scipy >=1.2.0",
]
keywords = ["quadratic programming", "solver", "numerical optimization"]

[project.optional-dependencies]
clarabel = ["clarabel >=0.4.1"]
cvxopt = ["cvxopt >=1.2.6"]
kvxopt = ["kvxopt >=1.3.2"]
daqp = ["daqp >=0.5.1"]
ecos = ["ecos >=2.0.8"]
gurobi = ["gurobipy >=9.5.2"]
highs = ["highspy >=1.1.2.dev3"]
jaxopt = ["jaxopt >=0.8.3"]
mosek = ["cvxopt >=1.2.6", "mosek >=10.0.40"]
osqp = ["osqp >=0.6.2"]
piqp = ["piqp >=0.2.2"]
proxqp = ["proxsuite >=0.2.9"]
qpalm = ["qpalm >=1.2.1"]
quadprog = ["quadprog >=0.1.11"]
qpax = ["qpax>=0.0.9"]
scs = ["scs >=3.2.0"]
sip = ["sip-python >=0.0.2"]
open_source_solvers = ["qpsolvers[clarabel,cvxopt,daqp,ecos,highs,jaxopt,osqp,piqp,proxqp,qpalm,quadprog,scs,sip,qpax]"]

# Wheels-only solvers should distribute wheels that work on:
# - macOS (aarch64)
# - macOS (x86)
# - Linux (x86)
# - Windows (x86)
wheels_only = ["qpsolvers[cvxopt,daqp,ecos,highs,piqp,proxqp,qpalm,sip]"]

[project.urls]
Homepage = "https://github.com/qpsolvers/qpsolvers"
Documentation = "https://qpsolvers.github.io/qpsolvers/"
Source = "https://github.com/qpsolvers/qpsolvers"
Tracker = "https://github.com/qpsolvers/qpsolvers/issues"
Changelog = "https://github.com/qpsolvers/qpsolvers/blob/main/CHANGELOG.md"

[tool.coverage]
report.include = ["qpsolvers/*"]
report.omit = ["qpsolvers/unsupported/*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.8"
numpy = ">=1.15.4"
scipy = ">=1.2.0"

[tool.pixi.feature.test.dependencies]
clarabel = ">=0.4.1"
daqp = ">=0.5.1"
ecos = ">=2.0.8"
jaxopt = ">=0.8.3"
kvxopt = ">=1.3.2"
osqp = ">=0.6.2"
piqp = ">=0.2.2"
qpalm = ">=1.2.1"
qtqp = ">=0.0.3"
scs = ">=3.2.0"

[tool.pixi.feature.test-linux.dependencies]
highspy = ">=1.1.2.dev3"
qpax = ">=0.0.9"
proxsuite = ">=0.2.9"

[tool.pixi.feature.test-macos.dependencies]
highspy = ">=1.1.2.dev3"
qpax = ">=0.0.9"

[tool.pixi.feature.test-windows.dependencies]
proxsuite = ">=0.2.9"

[tool.pixi.feature.py38.dependencies]
python = "3.8.*"

[tool.pixi.feature.py39.dependencies]
python = "3.9.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.licensed.dependencies]
cvxopt = ">=1.2.6"
mosek = ">=10.0.40"

[tool.pixi.feature.coverage.dependencies]
coverage = ">=5.5"
coveralls = "*"

[tool.pixi.feature.lint.dependencies]
mypy = ">=0.812"
pylint = ">=2.8.2"
ruff = ">=0.5.4"

[tool.pixi.feature.docs.dependencies]
clarabel = ">=0.4.1"
cvxopt = ">=1.2.6"
daqp = ">=0.5.1"
furo = ">=2023.8.17"
highspy = ">=1.5.3"
jaxopt = ">=0.8.3"
kvxopt = ">=1.3.2"
piqp = ">=0.2.2"
proxsuite = ">=0.2.9"
qpalm = ">=1.2.1"
qpax = ">=0.0.6"
qtqp = ">=0.0.3"
quadprog = ">=0.1.11"
sphinx = ">=7.2.2"
sphinx-autodoc-typehints = "*"

[tool.pixi.feature.docs.pypi-dependencies]
sphinx-mathjax-offline = "*"
sip-python = ">=0.0.2"

[tool.pixi.feature.test.tasks]
test = "python -m unittest discover --failfast"

[tool.pixi.feature.coverage.tasks]
coverage-erase = { cmd = "coverage erase" }
coverage-run = { cmd = "coverage run -m unittest discover --failfast", depends-on = ["coverage-erase"] }
coverage = { cmd = "coverage report --include=\"qpsolvers/*\" --omit=\"qpsolvers/unsupported/*\"", depends-on = ["coverage-run"] }
coveralls = { cmd = "coveralls --service=github" }

[tool.pixi.feature.lint.tasks]
mypy = "mypy qpsolvers --config-file=pyproject.toml"
pylint = "pylint qpsolvers --exit-zero --rcfile=pyproject.toml"
ruff = "ruff check qpsolvers && ruff format --check pink"
lint = { depends-on = ["mypy", "pylint", "ruff"] }

[tool.pixi.feature.docs.tasks]
docs-build = "sphinx-build doc _build -W"

[tool.pixi.feature.licensed.tasks]
licensed = "python -m unittest discover --failfast"

[tool.pixi.environments]
test-py38-linux = { features = ["py38", "test", "test-linux"], solve-group = "py38" }
test-py38-macos = { features = ["py38", "test", "test-macos"], solve-group = "py38" }
test-py38-windows = { features = ["py38", "test", "test-windows"], solve-group = "py38" }
test-py39-linux = { features = ["py39", "test", "test-linux"], solve-group = "py39" }
test-py39-macos = { features = ["py39", "test", "test-macos"], solve-group = "py39" }
test-py39-windows = { features = ["py39", "test", "test-windows"], solve-group = "py39" }
test-py310-linux = { features = ["py310", "test", "test-linux"], solve-group = "py310" }
test-py310-macos = { features = ["py310", "test", "test-macos"], solve-group = "py310" }
test-py310-windows = { features = ["py310", "test", "test-windows"], solve-group = "py310" }
test-py311-linux = { features = ["py311", "test", "test-linux"], solve-group = "py311" }
test-py311-macos = { features = ["py311", "test", "test-macos"], solve-group = "py311" }
test-py311-windows = { features = ["py311", "test", "test-windows"], solve-group = "py311" }
test-py312-linux = { features = ["py312", "test", "test-linux"], solve-group = "py312" }
test-py312-macos = { features = ["py312", "test", "test-macos"], solve-group = "py312" }
test-py312-windows = { features = ["py312", "test", "test-windows"], solve-group = "py312" }
coverage = { features = ["py312", "coverage", "test-linux", "licensed"], solve-group = "py312" }
lint = { features = ["py312", "lint"], solve-group = "py312" }
licensed = { features = ["py312", "licensed"], solve-group = "py312" }
docs = { features = ["py310", "docs"], solve-group = "py310" }
